[package]
name = "selftest"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.100"
hex = { version = "0.4.3", features = ["serde"] }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
spdx = "0.12.0"
toml = "0.9.7"
